--- a/callee-with-db/src/main/resources/application-prod.properties
+++ b/callee-with-db/src/main/resources/application-prod.properties
@@ -1,7 +1,7 @@
 spring.application.name=callee-with-db
-spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=qwer1234
+spring.datasource.url=${DATASOURCE_URL}
+spring.datasource.username=${DATASOURCE_USERNAME}
+spring.datasource.password=${DATASOURCE_PASSWORD}
 spring.data.jdbc.dialect=postgresql
 
 spring.datasource.driver-class-name=org.postgresql.Driver
