--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
         <module>caller</module>
         <module>callee</module>
         <module>callee-with-db</module>
+        <module>common</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -29,13 +30,4 @@
     <dependencies>
 
     </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
 </project>
