--- a/caller/pom.xml
+++ b/caller/pom.xml
@@ -30,6 +30,11 @@
             <optional>true</optional>
         </dependency>
         <dependency>
+            <groupId>io.whatap</groupId>
+            <artifactId>common</artifactId>
+            <version>0.0.1</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
