--- a/oom/whatap.conf
+++ b/oom/whatap.conf
@@ -1,1 +1,5 @@
 trace_kube_exec_container_enabled=true
+tx_caller_meter_enabled=true
+sql_dbc_meter_enabled=true
+httpc_host_meter_enabled=true
+actx_meter_enabled=true
