--- a/oom/src/main/resources/application.properties
+++ b/oom/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=oom
+app.memory.limit=${APP_MEMORY_LIMIT:200}
+app.memory.increase=${APP_MEMORY_INCREASE:5}
+app.reset.cron=${APP_RESET_CRON:2 * * * * *}
