--- a/callee-with-db/whatap.conf
+++ b/callee-with-db/whatap.conf
@@ -1,3 +1,5 @@
-trace_kube_exec_container_enabled=true
 logsink_enabled=true
 logsink_trace_enabled=true
+whatap.server.port=61574
+whatap.server.host=59.13.101.109
+weaving=spring-boot-3.0
