local memory oom 추가

--- a/oom/src/main/resources/application.properties
+++ b/oom/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=oom
+app.reset.cron=${APP_RESET_CRON:5 * * * * *}
 app.memory.limit=${APP_MEMORY_LIMIT:200}
 app.memory.increase=${APP_MEMORY_INCREASE:5}
-app.reset.cron=${APP_RESET_CRON:2 * * * * *}
+app.memory.type=${APP_MEMORY_TYPE:static}
+app.memory.input-huge-memory=${APP_MEMORY_INPUT_HUGE_MEMORY:300}
