--- a/oom/src/main/resources/application.properties
+++ b/oom/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=oom
-app.reset.cron=${APP_RESET_CRON:5 * * * * *}
+app.memory.reset.cron=${APP_MEMORY_RESET_CRON:5 * * * * *}
 app.memory.limit=${APP_MEMORY_LIMIT:200}
 app.memory.increase=${APP_MEMORY_INCREASE:5}
 app.memory.type=${APP_MEMORY_TYPE:static}
