--- a/oom/src/main/resources/application.properties
+++ b/oom/src/main/resources/application.properties
@@ -1,6 +1,16 @@
 spring.application.name=oom
+
+#static 으로 설정한 경우 얼마 주기로 메모리를 해제할지 cron 설정
 app.memory.reset.cron=${APP_MEMORY_RESET_CRON:5 * * * * *}
+
+#힙 사용량이 이 설정값 이상으로 못넘어가도록 하는 옵션, MB 단위 (app.memory.type 이 local 인 경우 이 옵션값 두배 만큼까지 올라갈 수 있음)
 app.memory.limit=${APP_MEMORY_LIMIT:200}
+
+#static 으로 설정한 경우 몇 MB 씩 증가할지 수치, MB 단위
 app.memory.increase=${APP_MEMORY_INCREASE:5}
+
+#static 으로 설정할 경우 누적되는 메모리 사용(GC 안됨), local 로 설정할 경우 GC 되는 메모리 사용
 app.memory.type=${APP_MEMORY_TYPE:static}
+
+#local 로 설정할 경우 한번에 주입할 큰 메모리 크기, MB 단위
 app.memory.input-huge-memory=${APP_MEMORY_INPUT_HUGE_MEMORY:300}
